--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node index",
     "build": "grunt",
-    "preinstall": "build-config.sh",
+    "preinstall": "./build-config.sh",
     "test": "HOME=test/fixtures mocha test/**/*.js && npm run lint",
     "lint": "eslint index.js Gruntfile.js src/ test/ client/ defaults/"
   },
